--- a/scripts/crop_images.ipynb
+++ b/scripts/crop_images.ipynb
@@ -332,77 +332,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "db58a247-cba2-45d7-878b-7675a1838921",
    "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    },
     "tags": []
    },
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'cropping_logfile' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-11-9f5f0d153fe5>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mcropping_dict\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcropping_thread\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mresult\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0msave_cropping_areas\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcropping_dict\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfile_name\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mforce\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mappend\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-9-a638473c9d77>\u001b[0m in \u001b[0;36mcrop_all_images\u001b[0;34m(button, image_list, output_dir, cropping_dict, force, skip_first_n, cropping_csv_file_name)\u001b[0m\n\u001b[1;32m     31\u001b[0m         \u001b[0;31m# store the cropping area and save cropped image, we resacale to 550x550\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     32\u001b[0m         \u001b[0mcropping_dict\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mnimg\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0malias\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnimg\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcrop_dict\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 33\u001b[0;31m         nimg.save_cropped(rescaling_function=rescale_to_square, force=force,\n\u001b[0m\u001b[1;32m     34\u001b[0m                          cropping_csv_file_name=cropping_csv_file_name)\n\u001b[1;32m     35\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/Desktop/island_in_the_sun/javascript/2021_11_birds/eseb-birds/scripts/napari_utils.py\u001b[0m in \u001b[0;36msave_cropped\u001b[0;34m(self, output_dir, rescaling_function, force, cropping_csv_file_name)\u001b[0m\n\u001b[1;32m    116\u001b[0m         \u001b[0;31m# also we track the cropping areas.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    117\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mcropping_csv_file_name\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 118\u001b[0;31m             save_cropping_areas(\n\u001b[0m\u001b[1;32m    119\u001b[0m                 {self.alias: self.crop_dict}, cropping_csv_file_name, append=True)\n\u001b[1;32m    120\u001b[0m         \u001b[0;32mreturn\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/Desktop/island_in_the_sun/javascript/2021_11_birds/eseb-birds/scripts/napari_utils.py\u001b[0m in \u001b[0;36msave_cropping_areas\u001b[0;34m(cropping_dict, file_name, force, append)\u001b[0m\n\u001b[1;32m    248\u001b[0m     '''\n\u001b[1;32m    249\u001b[0m     \u001b[0mexample\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcropping_dict\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcropping_dict\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mkeys\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 250\u001b[0;31m     \u001b[0;32mif\u001b[0m \u001b[0mappend\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexists\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcropping_logfile\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m:\u001b[0m \u001b[0moption\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"a\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    251\u001b[0m     \u001b[0;32melse\u001b[0m \u001b[0;34m:\u001b[0m \u001b[0moption\u001b[0m \u001b[0;34m=\u001b[0m\u001b[0;34m\"w\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    252\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexists\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcropping_logfile\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0mforce\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0mappend\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'cropping_logfile' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "cropping_dict = cropping_thread.result()\n",
     "save_cropping_areas(cropping_dict, file_name, force=False, append=False)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 38,
-   "id": "ff365bf8-8311-4c1b-b65a-9cddcb4ee252",
+   "cell_type": "markdown",
+   "id": "208f378a-37ff-47e6-b82a-954b37eb855c",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "5a24be5e-0752-4de7-ad9e-658546de9bfb",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Stack for <Task pending name='Task-1' coro=<crop_all_images() running at <ipython-input-9-d1e9957a6faf>:18> wait_for=<Future pending cb=[<TaskWakeupMethWrapper object at 0x7fb0a8a62d30>()]>> (most recent call last):\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  File \"<ipython-input-9-d1e9957a6faf>\", line 18, in crop_all_images\n",
-      "    await wait_for_change(button)\n"
-     ]
-    }
-   ],
    "source": [
-    "cropping_thread.print_stack()"
+    "So now we are done :)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "eefbec83-07b8-43db-8a99-f6fea667a9e9",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
